# ProteoSphereDemo

./: .gitattributes  .gitignore  INSTALL.md  LICENSE  LIMITATIONS.md  README.md  REVIEWER_EVAL_RESULT.json  REVIEWER_EVAL_RESULT.md  REVIEWER_EVAL_RESULT_v2.json  REVIEWER_EVAL_RESULT_v2.md  WAREHOUSE_QA.md  WAREHOUSE_QA_v2.md  WAREHOUSE_QA_v3.md  build_demo_warehouse.py  fetch_mcsa.py  launch_model_studio.bat  launch_model_studio.sh  materialize_afdb_full.py  materialize_aux_annotations.py  materialize_biogrid_trembl_bridge.py  materialize_davis_variants.py  materialize_davis_variants_v2.py  materialize_davis_variants_v3.py  materialize_davis_variants_v4_final.py  materialize_ecfp4_similarity.py  materialize_enzyme_dat.py  materialize_full_demo_warehouse.py  materialize_goa_full.py  materialize_idmapping_extract.py  materialize_interactions.py  materialize_papers_and_audit.py  materialize_pdbbind_ligands.py  materialize_protein2ipr.py  materialize_reactome_hierarchy.py  materialize_scop_cath.py  materialize_sifts_pdb_uniprot.py  materialize_swissprot.py  materialize_trembl_dr.py  materialize_trembl_idmapping_dat.py  materialize_uniref_full_from_idmapping.py  (+10 more)
proteosphere_app/: README.md  pyproject.toml
proteosphere_app/examples/: clean_protein_pair.json  clustered_split_demo.json  paper_corpus_minimal.json  protein_ligand_overlap.json  protein_pair_overlap.json  structure_pair_overlap.json
proteosphere_app/schemas/: custom_dataset_manifest.schema.json  paper_dataset_corpus.schema.json  split_assessment.schema.json
proteosphere_app/tests/: test_release_app.py  (+1 more)
(+632 files in other folders)
